@@ -18,7 +18,7 @@ $moduleDirNameUpper = mb_strtoupper($moduleDirName);
 $modversion    = [
     'version'       => 1.53,
     'module_status' => 'Beta 2',
-    'release_date'  => '2020/11/15',
+    'release_date'  => '2021/08/08',
     'name'          => _MI_LEXIKON_MD_NAME,
     'description'   => _MI_LEXIKON_MD_DESC,
     'author'        => 'Yerres',
