@@ -1,4 +1,4 @@
-<h5>1.53 Beta 2   [2020-11-15]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 4
+<h5>1.53 Beta 2   [2021-08-08]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.9
 <hr>
 - PHP7, PHP8 adjustments (mamba)
 - testdata (mamba)
@@ -8,6 +8,9 @@
 - fixed problems with template_main (goffy)
 - updated german language files (goffy)
 - added smarty defaults (goffy)
+- Packed hashtable optimizations (mamba)
+- fix Unqualified function/constant reference (mamba)
+
 
 <h5>1.53 Beta 1     [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
 <hr>
